--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,30 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.effone.reservopia">
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
+        android:name=".app.ResApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:name=".app.ResApplication"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
-
-        </activity>
-        <activity android:name=".Activity.AppointementBookingActivity" />
-        <activity android:name=".Activity.LocationServiceActivity" />
-        <activity android:name=".Activity.AppointmentAcknowledgementActivity" />
-        <activity android:name=".Activity.AppointmentHistoryActivity"></activity>
-        <activity android:name=".Activity.AppointmentDetailsActivity"/>
-        <activity android:name=".Activity.RegisterActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Activity.AppointementBookingActivity" />
+        <activity android:name=".Activity.LocationServiceActivity" />
+        <activity android:name=".Activity.AppointmentAcknowledgementActivity" />
+        <activity android:name=".Activity.AppointmentHistoryActivity" />
+        <activity android:name=".Activity.AppointmentDetailsActivity" />
+
+        <receiver android:name=".receivers.NetworkChangeReceiver">
+            <intent-filter>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+            </intent-filter>
+        </receiver>
+
+        <activity android:name=".Activity.NetworkErrorActivity"></activity>
     </application>
 
 </manifest>
