--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
             </intent-filter>
         </receiver>
 
+        <activity android:name=".Activity.MultipleLocationServiceActivity"/>
         <activity android:name=".Activity.NetworkErrorActivity"></activity>
     </application>
 
