--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,8 @@
         <activity android:name=".Activity.MultipleLocationServiceActivity"/>
         <activity android:name=".Activity.NetworkErrorActivity"></activity>
 
-        <activity android:name=".Activity.LoginActivity" ></activity>
+        <activity android:name=".Activity.LoginActivity"
+            android:theme="@style/customDialogTheme"></activity>
     </application>
 
 </manifest>
