--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="MainActivity"
+        <activity android:name="MainActivity" android:windowSoftInputMode="stateAlwaysHidden"
            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,11 +28,12 @@
         <activity android:name=".Activity.AppointmentHistoryActivity" />
         <activity android:name=".Activity.AppointmentDetailsActivity" />
         <activity android:name=".Activity.RegisterActivity"/>
-        <receiver android:name=".receivers.NetworkChangeReceiver">
+        <activity android:name=".Activity.NoNetworkActivity"/>
+      <!--  <receiver android:name=".receivers.NetworkChangeReceiver">
             <intent-filter>
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
             </intent-filter>
-        </receiver>
+        </receiver>-->
 
         <activity android:name=".Activity.MultipleLocationServiceActivity"/>
         <activity android:name=".Activity.NetworkErrorActivity"></activity>
