reset and forgot password

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,33 +13,38 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="MainActivity" android:windowSoftInputMode="stateAlwaysHidden"
-           >
+        <activity
+            android:name=".MainActivity"
+            android:windowSoftInputMode="stateAlwaysHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activity.AppointementBookingActivity"
-            android:windowSoftInputMode="adjustPan|stateAlwaysHidden"/>
+        <activity
+            android:name=".Activity.AppointementBookingActivity"
+            android:windowSoftInputMode="adjustPan|stateAlwaysHidden" />
         <activity android:name=".Activity.LocationServiceActivity" />
         <activity android:name=".Activity.AppointmentAcknowledgementActivity" />
         <activity android:name=".Activity.AppointmentHistoryActivity" />
         <activity android:name=".Activity.AppointmentDetailsActivity" />
-        <activity android:name=".Activity.RegisterActivity"/>
-        <activity android:name=".Activity.NoNetworkActivity"/>
-      <!--  <receiver android:name=".receivers.NetworkChangeReceiver">
+        <activity android:name=".Activity.RegisterActivity" />
+        <activity android:name=".Activity.NoNetworkActivity" />
+        <!--
+        <receiver android:name=".receivers.NetworkChangeReceiver">
             <intent-filter>
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
             </intent-filter>
-        </receiver>-->
+        </receiver>
+        -->
 
-        <activity android:name=".Activity.MultipleLocationServiceActivity"/>
-        <activity android:name=".Activity.NetworkErrorActivity"></activity>
-
-        <activity android:name=".Activity.LoginActivity"
-            android:theme="@style/customDialogTheme"></activity>
+        <activity android:name=".Activity.MultipleLocationServiceActivity" />
+        <activity android:name=".Activity.NetworkErrorActivity" />
+        <activity
+            android:name=".Activity.LoginActivity"
+            android:theme="@style/customDialogTheme" />
+        <activity android:name=".Activity.ResetNForgotActivity"></activity>
     </application>
 
 </manifest>
