--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,8 @@
         <activity
             android:name=".Activity.LoginActivity"
             android:theme="@style/customDialogTheme" />
-        <activity android:name=".Activity.ResetNForgotActivity"></activity>
+        <activity android:name=".Activity.ResetNForgotActivity" />
+        <activity android:name=".Activity.SearchAppointmentActivity"></activity>
     </application>
 
 </manifest>
